# the profile used for `cargo build`
[profile.dev]
#panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
#panic = "abort" # disable stack unwinding on panic


[package]
name = "os_simple"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
volatile = "0.2.6" #avoid delete
spin = "0.5.2" #lock
x86_64 = "0.14.2" #exit qemu
uart_16550 = "0.2.0" #send message to console
pic8259 = "0.10.1" #hardware interrupts
pc-keyboard = "0.5.0" #keyboard
linked_list_allocator = "0.9.0" #heap

[dependencies.lazy_static] # a way to use static (called once when use)
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage] #a way to exit qemu with no error
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 30          # (in seconds)

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

